# tf_cpp

cython-cmake-example/: CMakeLists.txt  setup.py
cython-cmake-example/cmake/: ReplicatePythonSourceTree.cmake
cython-cmake-example/include/: Model.h  c_model.pxd  model.pxd
cython-cmake-example/src/: CMakeLists.txt  Model.cpp  model.pyx  rect.pyx
tensorflow-object-detection-cpp/: .gitignore  CMakeLists.txt  main.cpp  utils.cpp  utils.h
tf_cpp_py/: .gitignore  Model.cpp  Model.h  experiment.ipynb  setup.py
tf_cpp_py/test/: CMakeLists.txt  main.cpp
tf_cpp_py/test/Model/: Model.cpp  Model.h  Model.pxd  PyModel.cpp  PyModel.pyx  setup.py
tf_cpp_py/test/Status/: PyStatus.cpp  PyStatus.pyx  Status.pxd  setup.py
